na: code polishing [dshcherbatiuk] [V]

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "k--kato.intellij-idea-keybindings",
         "ms-vscode.hexeditor",
-        "vscjava.vscode-java-pack"
+        "vscjava.vscode-java-pack",
+        "hediet.vscode-drawio"
     ]
 }   
