--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,19 @@ plugins {
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 dependencies {
-    // https://mvnrepository.com/artifact/com.github.misberner.duzzt/duzzt-processor
-    annotationProcessor 'com.github.misberner.duzzt:duzzt-processor:0.1.0'
-    implementation 'com.github.misberner.duzzt:duzzt-processor:0.1.0'
+    implementation project(":processor-cli")
+    annotationProcessor project(":processor-cli")
+
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+    implementation 'commons-cli:commons-cli:1.5.0'
+
+    // https://mvnrepository.com/artifact/com.google.auto.service/auto-service
+    implementation 'com.google.auto.service:auto-service:1.0.1'
+
     // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
